--- a/qmd/hydrascripts.qmd
+++ b/qmd/hydrascripts.qmd
@@ -1,10 +1,13 @@
 # Hydra Analysis Scripts
 All scripts below can be submitted as jobs on the NMNH Hydra cluster using `qsub`. 
 
-> [!NOTE]
-> `AISO` refers to a script format with 4 required sections: ABOUT, INPUTS, SCRIPT, and OUTPUTS.
-> The user should only need to modify the INPUTS section of the script
+::: {.callout-note}
+`AISO` refers to a script format with 4 required sections: ABOUT, INPUTS, SCRIPT, and OUTPUTS.
+The user should only need to modify the INPUTS section of the script
+:::
 
-## [AISO_GetOrganelle_Hydra.sh](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_GetOrganelle_Hydra.sh)
+## AISO_GetOrganelle_Hydra.sh
+[Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_GetOrganelle_Hydra.sh)
 
-## [AISO_go_fetch.sh](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_go_fetch.sh)
+## AISO_go_fetch.sh
+[Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_go_fetch.sh)
