--- a/qmd/utilityscripts/recursiveReplaceStrings.qmd
+++ b/qmd/utilityscripts/recursiveReplaceStrings.qmd
@@ -1,5 +1,7 @@
 # Recursive replace strings
 
+Script name: `recursiveReplaceStrings.sh`
+
 [Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/utils/recursiveReplaceStrings.sh)
 
 ::: {.callout-warning}
