--- a/qmd/hydrascripts/Go_fetch.qmd
+++ b/qmd/hydrascripts/Go_fetch.qmd
@@ -1,10 +1,13 @@
 # go_fetch - download organelle or ribosomal sequences from GenBank
 
-[Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_go_fetch.sh)
-
 ::: {.callout-note}
 `AISO` refers to a script format with 4 required sections: ABOUT, INPUTS, SCRIPT, and OUTPUTS.
 The user should only need to modify the INPUTS section of the script
 :::
+
+Script name: `AISO_go_fetch.sh`
+
+[Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/Hydra/AISO_go_fetch.sh)
+
 
 This script relies on [go_fetch](https://github.com/o-william-white/go_fetch)
