--- a/qmd/utilityscripts/batchRenameFiles.qmd
+++ b/qmd/utilityscripts/batchRenameFiles.qmd
@@ -1,5 +1,7 @@
 # Batch rename files
 
+Script name: `batchRenameFiles.sh`
+
 [Source code](https://github.com/dmacguigan/SI-Ocean-DNA/blob/main/scripts/utils/batchRenameFiles.sh)
 
 Script to quickly rename many files. Can replace all (`-m full`) or part (`-m partial`) of the file names in a target directory.
