--- a/qmd/datamanagement.qmd
+++ b/qmd/datamanagement.qmd
@@ -1,50 +1,57 @@
-# Workflow Diagram
+# Data Management Workflow
+
+The following is a proposed data management guide for Ocean DNA sequence data. This workflow was designed for genome skimming datasets, but could be adapted for other project types. 
+
+::: {.callout-important}
+Please see the `README.md` the Ocean DNA Hydra Store directory for details about where to upload raw data and how to name files/directories.
+:::
 
 ```{mermaid}
 graph TD;
 
   GenoHub[**GenoHub**
-Demultiplexed and compressed sequence reads in FASTQ format. Files should end in “.fastq.gz” or “.fq.gz”. Is there any consistent naming scheme?]
+Demultiplexed and compressed sequence reads in FASTQ format. Files should end in “.fastq.gz” or “.fq.gz”]
+  Metadata[**Metadata CSV**
+Information for all samples in the GenoHub project. Must include the following columns:
+***ID:*** GenoHub sample name
+***R1:*** read 1 FASTQ file name
+***R2:*** read 2 FASTQ file name
+***Taxon:*** your best guess at taxonomic assignment
+***UniqID:*** unique identifier linked to a voucher/tissue sample
+  ]
   Analyses(Run quality/adapter trimming, mitogenome assembly, etc)
   Scratch[(**Hydra Scratch**
-/scratch/???/USER_ID
+/scratch/nmnh_ocean_dna
 40 TB. Not backed up. Might need automatic file purging to keep space clean.)]
   Store[(**Hydra Store**
-/store/???/USER_ID
+/store/public/oceandna
 40 TB. Not backed up. For non-active projects or large raw data files. Drive system is slower, can't be used for active analysis)]
-  XDrive[(**P Drive**
+  PDrive[(**P Drive**
 P:&bsol;NMNH-OCEAN-DNA
-Initially 5 TB. Incrementally backed up daily, fully backed up weekly. Only accessible from SI computers.)]
-  GDrive[(**NOAA Google Drive**
-Unlimited storage space on NSL Google Shared Drive. Only accessible by NOAA employees.)]
+5 TB. Incrementally backed up daily, fully backed up weekly. Only accessible from SI computers.)]
   
-  Rename("`Dan? renames FASTQ files following Best Practices Guide`")
+  Move1[download raw FASTQ files]  
+  Move3[copy clean reads and final results]
+  Move4[Dan M. runs monthly backup]
 
-  Move1[/download raw FASTQ files - Dan M.?/]
-  Move2[/copy renamed raw FASTQs - Dan M.?/]
-  Move3[/copy clean reads and final results/]
-  Move4[/run monthly backup - Dan M./]
-
+  Metadata-->Store
   GenoHub-->Move1
+  Move1-->Store
   Move1-->Scratch
   subgraph " "
-    Scratch-->Rename
-    Rename-->Analyses
-    Rename-->Move2
-    Move2-->Store
+    Scratch-->Analyses
     Analyses-->Move3
     Move3-->Store
   end
   Store-->Move4
-  Move4-->XDrive
-  Move4-->GDrive
+  Move4-->PDrive
 
   classDef process stroke:black,color:white,fill:#159BD7,stroke-dasharray: 5 5
   classDef storage stroke:black,color:white,fill:#159BD7
   classDef ccr stroke:black,color:white,fill:#159BD7
 
   class Rename,Analyses,Move1,Move2,Move3,Move4 process
-  class GenoHub,Scratch,Store,XDrive,GDrive storage
+  class Metadata,GenoHub,Scratch,Store,PDrive storage
 
   click Rename "bestpractices.html"
 
