--- a/qmd/datamanagement.qmd
+++ b/qmd/datamanagement.qmd
@@ -1,9 +1,9 @@
 # Data Management Workflow
 
-The following is a proposed data management guide for Ocean DNA sequence data. This workflow was designed for genome skimming datasets, but could be adapted for other project types. 
+The following is a proposed data management guide for SI Ocean DNA sequence data. This workflow was designed for genome skimming datasets, but could be adapted for other project types. 
 
 ::: {.callout-important}
-Please see the `README.md` the Ocean DNA Hydra Store directory for details about where to upload raw data and how to name files/directories.
+Please see the `README.md` the Ocean DNA Hydra Store directory for details about where to upload raw data and how to name files and directories.
 :::
 
 ```{mermaid}
@@ -22,17 +22,17 @@ Information for all samples in the GenoHub project. Must include the following c
   Analyses(Run quality/adapter trimming, mitogenome assembly, etc)
   Scratch[(**Hydra Scratch**
 /scratch/nmnh_ocean_dna
-40 TB. Not backed up. Might need automatic file purging to keep space clean.)]
+40 TB. Not backed up, no automatic file purging.)]
   Store[(**Hydra Store**
 /store/public/oceandna
-40 TB. Not backed up. For non-active projects or large raw data files. Drive system is slower, can't be used for active analysis)]
+40 TB. Not backed up, no automatic file purging. For large raw data files and inactive projects. Drive system is slower, can't be used for active analysis)]
   PDrive[(**P Drive**
 P:&bsol;NMNH-OCEAN-DNA
-5 TB. Incrementally backed up daily, fully backed up weekly. Only accessible from SI computers.)]
+80 TB. Incrementally backed up daily, fully backed up weekly. Only accessible from SI computers.)]
   
   Move1[download raw FASTQ files]  
-  Move3[copy clean reads and final results]
-  Move4[Dan M. runs monthly backup]
+  Move3[copy important results]
+  Move4[Dan M. runs monthly and on-demand backup]
 
   Metadata-->Store
   GenoHub-->Move1
